fixed a problem where the leave-group button would get clipped on the right on small iOS screens. https://trello.com/c/KuQVtBcs

--- a/src/main/resources/scss/profile/_components.scss
+++ b/src/main/resources/scss/profile/_components.scss
@@ -67,6 +67,9 @@
 
 .profile-top-controls-buttons {
 	flex: 0 0 auto;
+	ul {
+		margin: 0;
+	}
 	.button {
 		margin: 0.75rem;
 		margin-right: 0;
